# languages

./: .gitignore
haskell/: lab_01.hs  lab_02.hs
haskell/lab_01/: lab_01.hs
haskell/lab_02/: expr.hs  hello  hello.hs  lab_02.hs  split  split.hi  split.hs  split_lines  split_lines.hi  split_lines.hs
haskell/lab_03/: Tree.hs  Zad_01.hs  Zad_02.hs  Zad_03.hs  Zad_04.hs  bonus.hs  sort.hs
haskell/lab_04/: monadError.hs  monadList.hs  monadReader.hs  monadState.hs  myMonadState.hs  state.hs
haskell/lab_06/: simple_parser.hs  syntax.hs
haskell/learnyouahaskell/: high-order-functions.hs  modules.hs  types.hs
haskell/lectures/: lec_02.hs
haskell/wiwikwlh/: bottoms.hs
haskell/zad_01/: Auto.hi  Auto.hs  ChangeLog.md  LICENSE  MyTests.hs  RunAuto  RunAuto.hi  RunAuto.hs  SimpleTests.hs  TestAuto.hs  zad01.cabal
haskell/zad_01_lk/: Auto.hs  RunAuto.hs
interpreter/: Interpreter.cabal  Interpreter.hs  Makefile  MarkJones.hs  README.md  Solver.hs  prolog-bnf-grammar.txt  prolog.cf
interpreter/bad/: division-by-zero-error.pl  negation-flounder.pl  parse-1-error.pl  parse-2-error.pl  parse-3-error.pl  unknown-predicate-error.pl  unsubstatiated-arithmetic-error.pl  wrong-query-error.pl
interpreter/examples/: lists.pl  problem.pl  trees.pl
interpreter/good/: integers.pl  lists.pl  natural.pl  negation.pl  qsort.pl  trees.pl
interpreter/resources/: MarkJones.hs
interpreter/src/: AbstractProlog.hs  Db.hs  Extensions.hs  Solver.hs  Unifier.hs
prolog/: lab_01.pl  lab_02.pl  mount_remote.sh
prolog/zad_02/: auto.pl  (+4 more)
smalltalk/: DPRO.chg  DPRO.errors  lab_01.st
(+30 files in other folders)
