name:           simpleProlog
version:        0.1
synopsis:       Simple prolog interpreter
author:         Tomasz Kępa
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs:     out, src
  exposed-modules:    ErrM, LexProlog, ParProlog, PrintProlog, TestProlog,
                      Db, AbsProlog, Solver, Extensions
  build-depends:      base >= 4.7 && < 5, array, mtl, containers, split, transformers
  default-language:   Haskell2010
  -- other-modules:

executable interpreter
  build-depends:  base, array, mtl, containers, split, simpleProlog
  main-is:        Interpreter.hs
